tests/reference/asr-test_tuple3-19fa47f.stderr
semantic error: Tuple index out of bounds
 --> tests/errors/test_tuple3.py:3:11
  |
3 |     print(t[-4])
  |           ^^^^^ 


Note: Please report unclear or confusing messages as bugs at
https://github.com/lcompilers/lpython/issues.
